--- a/trunk/data/classix.ui
+++ b/trunk/data/classix.ui
@@ -4,6 +4,8 @@
   <!-- interface-naming-policy project-wide -->
   <object class="GtkWindow" id="main_window">
     <property name="title" translatable="yes">Classix</property>
+    <property name="default_width">480</property>
+    <property name="default_height">320</property>
     <property name="icon_name">applications-science</property>
     <signal name="destroy" handler="on_main_window_destroy"/>
     <child>
@@ -56,6 +58,7 @@
               <object class="GtkTreeView" id="search_treeview">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
+                <property name="resize_mode">queue</property>
                 <property name="rules_hint">True</property>
               </object>
             </child>
@@ -69,8 +72,6 @@
             <child>
               <object class="GtkProgressBar" id="progressbar">
                 <property name="visible">True</property>
-                <property name="show_text">True</property>
-                <property name="text" translatable="yes">Finding...</property>
               </object>
               <packing>
                 <property name="position">0</property>
@@ -79,9 +80,9 @@
             <child>
               <object class="GtkButton" id="stop_button">
                 <property name="label" translatable="yes">gtk-stop</property>
-                <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">False</property>
+                <property name="no_show_all">True</property>
                 <property name="use_stock">True</property>
                 <property name="focus_on_click">False</property>
                 <signal name="clicked" handler="on_stop_button_clicked"/>
@@ -101,12 +102,12 @@
     </child>
   </object>
   <object class="GtkTreeViewColumn" id="search_tvcol_title">
+    <property name="sizing">autosize</property>
     <property name="title">T&#xED;tulo</property>
     <property name="expand">True</property>
   </object>
   <object class="GtkTreeViewColumn" id="search_tvcol_code">
     <property name="sizing">autosize</property>
     <property name="title">C&#xF3;digo</property>
-    <property name="expand">True</property>
   </object>
 </interface>
