--- a/data/classix.ui
+++ b/data/classix.ui
@@ -59,6 +59,7 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="resize_mode">queue</property>
+                <property name="headers_visible">True</property>
                 <property name="rules_hint">True</property>
               </object>
             </child>
