--- a/data/classix.ui
+++ b/data/classix.ui
@@ -8,40 +8,48 @@
     <property name="default_height">320</property>
     <property name="icon_name">applications-science</property>
     <signal name="destroy" handler="on_main_window_destroy"/>
-    <signal name="key-press-event" handler="on_key_press"/>
-    <signal name="window-state-event" handler="on_window_state_change"/>
+    <signal name="key_press_event" handler="on_key_press"/>
+    <signal name="window_state_event" handler="on_window_state_change"/>
     <child>
       <object class="GtkVBox" id="vbox1">
         <property name="visible">True</property>
+        <property name="orientation">vertical</property>
         <child>
-          <object class="GtkHBox" id="hbox1">
+          <object class="GtkToolbar" id="search_toolbar">
             <property name="visible">True</property>
             <child>
-              <object class="GtkEntry" id="search_entry">
+              <object class="GtkToolItem" id="search_entry_placeholder">
                 <property name="visible">True</property>
-                <property name="invisible_char">&#x25CF;</property>
-                <property name="activates_default">True</property>
-                <property name="truncate_multiline">True</property>
+                <child>
+                  <object class="GtkEntry" id="search_entry">
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="has_focus">True</property>
+                    <property name="is_focus">True</property>
+                    <property name="invisible_char">&#x25CF;</property>
+                    <property name="activates_default">True</property>
+                    <signal name="activate" handler="on_search_entry_activated"/>
+                  </object>
+                </child>
               </object>
               <packing>
-                <property name="position">0</property>
+                <property name="expand">True</property>
+                <property name="homogeneous">True</property>
               </packing>
             </child>
             <child>
-              <object class="GtkButton" id="search_button">
-                <property name="label">gtk-find</property>
+              <object class="GtkToolButton" id="search_button">
                 <property name="visible">True</property>
-                <property name="can_focus">True</property>
                 <property name="can_default">True</property>
                 <property name="has_default">True</property>
-                <property name="receives_default">False</property>
-                <property name="use_stock">True</property>
-                <property name="focus_on_click">False</property>
+                <property name="is_important">True</property>
+                <property name="use_underline">True</property>
+                <property name="stock_id">gtk-find</property>
                 <signal name="clicked" handler="on_search_button_clicked"/>
               </object>
               <packing>
                 <property name="expand">False</property>
-                <property name="position">1</property>
+                <property name="homogeneous">True</property>
               </packing>
             </child>
           </object>
@@ -61,7 +69,6 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="resize_mode">queue</property>
-                <property name="headers_visible">True</property>
                 <property name="rules_hint">True</property>
               </object>
             </child>
@@ -71,30 +78,8 @@
           </packing>
         </child>
         <child>
-          <object class="GtkHBox" id="hbox2">
-            <child>
-              <object class="GtkProgressBar" id="progressbar">
-                <property name="visible">True</property>
-              </object>
-              <packing>
-                <property name="position">0</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkButton" id="stop_button">
-                <property name="label">gtk-stop</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">False</property>
-                <property name="no_show_all">True</property>
-                <property name="use_stock">True</property>
-                <property name="focus_on_click">False</property>
-                <signal name="clicked" handler="on_stop_button_clicked"/>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="position">1</property>
-              </packing>
-            </child>
+          <object class="GtkProgressBar" id="progressbar">
+            <property name="visible">True</property>
           </object>
           <packing>
             <property name="expand">False</property>
