--- a/data/classix.ui
+++ b/data/classix.ui
@@ -21,14 +21,32 @@
               <object class="GtkToolItem" id="search_entry_placeholder">
                 <property name="visible">True</property>
                 <child>
-                  <object class="GtkEntry" id="search_entry">
+                  <object class="GtkHBox" id="hbox1">
                     <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="has_focus">True</property>
-                    <property name="is_focus">True</property>
-                    <property name="invisible_char">&#x25CF;</property>
-                    <property name="activates_default">True</property>
-                    <signal name="activate" handler="on_search_entry_activated"/>
+                    <property name="spacing">3</property>
+                    <child>
+                      <object class="GtkLabel" id="search_entry_label">
+                        <property name="visible">True</property>
+                        <property name="label" translatable="yes">Search:</property>
+                        <property name="single_line_mode">True</property>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="position">0</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkEntry" id="search_entry">
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="invisible_char">&#x25CF;</property>
+                        <property name="activates_default">True</property>
+                        <signal name="activate" handler="on_search_entry_activate"/>
+                      </object>
+                      <packing>
+                        <property name="position">1</property>
+                      </packing>
+                    </child>
                   </object>
                 </child>
               </object>
@@ -42,9 +60,8 @@
                 <property name="visible">True</property>
                 <property name="can_default">True</property>
                 <property name="has_default">True</property>
-                <property name="is_important">True</property>
                 <property name="use_underline">True</property>
-                <property name="stock_id">gtk-find</property>
+                <property name="stock_id">gtk-ok</property>
                 <signal name="clicked" handler="on_search_button_clicked"/>
               </object>
               <packing>
