--- a/trunk/data/classix.ui
+++ b/trunk/data/classix.ui
@@ -82,7 +82,7 @@
               <object class="GtkToolButton" id="save_as_button">
                 <property name="visible">True</property>
                 <property name="sensitive">False</property>
-                <property name="label" translatable="yes">toolbutton1</property>
+                <property name="label" translatable="yes">Save As</property>
                 <property name="stock_id">gtk-save-as</property>
                 <accelerator key="s" signal="clicked" modifiers="GDK_SHIFT_MASK | GDK_CONTROL_MASK"/>
                 <signal name="clicked" handler="on_save_as_button_activate"/>
